--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm install
+      - name: Fix vite permissions
+        run: chmod +x node_modules/.bin/vite
       - name: Build
         run: npm run build
       - name: Setup Pages
